# mldevops_exercise

./: Lab1_1.py  Lab1_2.py  Lab1_3.py  pyproject.toml
