[tool.poetry]
name = "mldevops-exercise"
version = "0.1.0"
description = "Development Operations for a Machine Learning Project"
authors = ["jbrzezinski <jbrzezinski@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.10.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
